fix: right-align + and Submit buttons

--- a/src/main/webapp/css/multi-event-log-plugin.css
+++ b/src/main/webapp/css/multi-event-log-plugin.css
@@ -115,6 +115,10 @@
 	border: 1px solid black;
 }
 
+.right-align{
+	float: right;
+}
+
 .z-button{
 	background-color: #6c453f;
 	font-weight: bold;
